# AgentMorph

./: .gitignore  AgentMorph_Execution_Plan.docx  AgentMorph_Realistic_Plan.md  AgentMorph_Stage2_Runbook.md  CLAUDE.md  Daily_Report_Apr18.md  PROGRESS.md  PROGRESS_2026-04-22.md  README.md  pyproject.toml
.claude/: settings.local.json
notebooks/: AgentMorph_Stage1.ipynb  _build_stage3_notebooks.py  colab_setup.py  stage1_Gemma-2-9B.ipynb  stage1_Llama-3.1-8B.ipynb  stage1_Llama-3.2-3B.ipynb  stage1_Phi-4.ipynb  stage1_Qwen2.5-7B.ipynb  stage1_agentdojo_canary.ipynb  stage2_seed_paraphrases.ipynb  stage3_dress_rehearsal.ipynb  stage3_full_sweep.ipynb  stage3_full_sweep_Gemma-2-9B.ipynb  stage3_full_sweep_Llama-3.1-8B.ipynb  stage3_full_sweep_Llama-3.2-3B.ipynb  stage3_full_sweep_Phi-4.ipynb  stage3_full_sweep_Qwen2.5-7B.ipynb
notebooks_results/: stage1_Gemma_2_9B.ipynb  stage1_Llama_3_1_8B.ipynb  stage1_Qwen2_5_7B.ipynb
runs/paraphrase_cache/: refusal_consistency.jsonl  schema_paraphrase_invariance.jsonl  synonym_robustness.jsonl
scripts/: generate_paraphrases.py
src/agentmorph/: __init__.py  models.py  paraphrase.py  runner.py  trajectories.py
src/agentmorph/agents/: __init__.py  base.py  langgraph_agent.py  registry.py  smolagents_agent.py
src/agentmorph/environments/: __init__.py  agentdojo_env.py  base.py  ecommerce_env.py  registry.py
src/agentmorph/rules/: __init__.py  _name_map.py  _shared.py  base.py  distractor_text_insensitivity.py  irrelevant_tool_insensitivity.py  parameter_order_invariance.py  persona_insensitivity.py  read_only_idempotency.py  refusal_consistency.py  registry.py  schema_paraphrase_invariance.py  synonym_robustness.py  tool_name_insensitivity.py  tool_order_invariance.py
src/agentmorph/tools/: __init__.py  base.py
src/agentmorph/tools/ecommerce/: __init__.py  cart.py  catalog.py  orders.py  payments.py  reviews.py  shipping.py  state.py  support.py  user.py
tests/: test_agentdojo_adapter.py  test_cpu_fallback.py  test_ecommerce_suite.py  test_multi_call_parser.py  test_native_agent.py  test_paraphrase_cache.py  test_parser_loose.py  test_rule_irrelevant_tool_insensitivity.py  test_rule_parameter_order_invariance.py  test_rule_read_only_idempotency.py  test_rule_refusal_consistency.py  test_rule_tool_name_insensitivity.py  test_rule_tool_order_invariance.py  test_rules_base.py  test_rules_gemini_backed.py  test_rules_prompt_prefix.py  test_rules_shared.py  test_runner_checkpoint.py  test_tools_base.py  test_trajectories.py
