[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmorph"
version = "0.1.0.dev0"
description = "Metamorphic testing for LLM agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AgentMorph authors" }]
dependencies = [
    "pydantic>=2.6",
    "jsonschema>=4.21",
    "tqdm>=4.66",
]

[project.optional-dependencies]
models = [
    "torch>=2.3",
    # Pinned <4.50 to avoid the `core_model_loading` parallel-materialisation
    # peak that pushes Phi-4 and Gemma-2-9B over the 14.56 GiB T4 limit on
    # Colab. transformers 4.48 is the first version with Phi-4 support; 4.49
    # is the last before the new loader. Stage 1 ran fine on this range; the
    # OOMs only started after Colab auto-upgraded to 4.50+.
    "transformers>=4.48,<4.50",
    "accelerate>=0.34",
    "bitsandbytes>=0.43",
]
smolagents = [
    "smolagents>=1.0",
]
langgraph = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-huggingface>=0.1",
]
agentdojo = [
    "agentdojo>=0.1.20",
]
# Stage 2: Gemini 2.5 Flash paraphraser (rules 2, 3, 5).
# Prefer the modern google-genai SDK; google-generativeai is deprecated as
# of 2025 and only kept as a fallback for environments stuck on old pins.
gemini = [
    "google-genai>=0.3",
]
# Stage 3: closed-model transfer study clients.
transfer = [
    "anthropic>=0.39",
    "groq>=0.12",
    "google-genai>=0.3",
]
# Stage 3/4: HuggingFace dataset upload.
datasets = [
    "datasets>=2.20",
    "huggingface-hub>=0.24",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
all = [
    "agentmorph[models,smolagents,langgraph,agentdojo,gemini,transfer,datasets,dev]",
]

[project.scripts]
agentmorph-baseline = "agentmorph.runner:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "gpu: requires a CUDA GPU",
    "needs_agentdojo: requires AgentDojo installation",
    "needs_smolagents: requires smolagents installation",
    "needs_langgraph: requires LangGraph installation",
]

[tool.ruff]
line-length = 100
target-version = "py310"
